# Maat

./: .classpath  .gitignore  .project  BUILD  README.md  WORKSPACE  angular.json  build.gradle  dev.config.json  index.html  main.go  package.json  settings.gradle
docker-compose/: docker-compose.yml
src/: BUILD.bazel  app-routing.module.ts  app.component.ts  app.module.ts  index.html  styles.css
src/app/: app-routing.module.ts  app.component.html  app.module.ts  app.module.ts.orig  general.util.ts
src/app/common/: search-bar.component.ts
src/app/company/: company.component.html  company.component.ts
src/app/model/: company.ts  product.ts
src/app/product/: product.component.css  product.component.html  product.component.ts
src/app/results/: results.component.css  results.component.html  results.component.ts
src/app/search/: search.component.css  search.component.html  search.component.ts
src/app/services/: company.service.ts  product.service.ts
src/maat/: BUILD.bazel  hello-world.component.ts  maat.component.ts  maat.module.ts
src/maat/company/: company.component.ts
src/main/angular/: index.html  styles.css
src/main/angular/app/: app-routing.module.ts  app.module.ts
src/main/angular/environments/: environment.prod.ts  environment.ts
src/main/go/: app.go  company.controller.go  main.go
src/main/go/controllers/: authentication.controller.go  company.controller.go
src/main/resources/: application.properties  banner.txt
src/resources/db/: liquibase.example.properties
src/resources/db/changelog/: db.changelog-1.0-auth.xml  (+2 more)
(+40 files in other folders)
